remove Coronavirus/coronavirus

--- a/_studies/2020-08-05-10.1016_j.ijid.2020.07.080.md
+++ b/_studies/2020-08-05-10.1016_j.ijid.2020.07.080.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Vitamin D3 and K2 and their potential contribution to reducing the COVID-19 mortality rate'
   description: 'The world is desperately seeking for a sustainable solution to combat the coronavirus strain SARS-CoV-2 (COVID-19). Recent research indicated that optimizing Vitamin D blood levels could offer a solution approach that promises a heavily reduced fatality rate as well as solving the public health problem of counteracting the general vitamin D deficiency. This paper dived into the immunoregulatory effects of supplementing Vitamin D3 by elaborating a causal loop diagram. Together with D3, vitamin K2 and magnesium should be supplemented to prevent long-term health risks. Follow up clinical randomized trials are required to verify the current circumstantial evidence.'
-  tags:        [Coronavirus, Immunology, Mortality rate, Vitamin D]
+  tags:        [Immunology, Mortality rate, Vitamin D]
 de:
   subtitle:    'Vitamin D3 und K2 und ihr möglicher Beitrag zur Senkung der COVID-19-Sterblichkeitsrate'
   description: 'Die Welt sucht verzweifelt nach einer nachhaltigen Lösung zur Bekämpfung des Coronavirus-Stammes SARS-CoV-2 (COVID-19). Jüngste Forschungsergebnisse deuten darauf hin, dass die Optimierung des Vitamin-D-Blutspiegels einen Lösungsansatz bieten könnte, der eine stark reduzierte Sterblichkeitsrate verspricht und gleichzeitig das Problem der öffentlichen Gesundheit löst, dem allgemeinen Vitamin-D-Mangel entgegenzuwirken. In diesem Beitrag wurden die immunregulatorischen Auswirkungen einer Vitamin-D3-Supplementierung anhand eines Kausalverlaufs untersucht. Zusammen mit D3 sollten Vitamin K2 und Magnesium supplementiert werden, um langfristige Gesundheitsrisiken zu vermeiden. Klinische randomisierte Folgestudien sind erforderlich, um die derzeitigen Indizien zu verifizieren.' 
-  tags:        [Coronavirus, Immunologie, Sterblichkeitsrate, Vitamin D]
+  tags:        [Immunologie, Sterblichkeitsrate, Vitamin D]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.ijid.2020.07.080
 ---
