--- a/_studies/2020-08-07-10.3390_nu12082358.md
+++ b/_studies/2020-08-07-10.3390_nu12082358.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Frühe Ernährungsinterventionen mit Zink, Selen und Vitamin D zur Erhöhung der antiviralen Resistenz gegen progressives COVID-19'
   description: 'Die neuartige Coronavirus-Infektion (COVID-19) stellt weltweit eine ernsthafte Bedrohung für Gesundheit und Wirtschaft dar, da es an Impfstoffen und spezifischen Behandlungen fehlt. Ein gemeinsamer Faktor für Erkrankungen, die für einen schweren Verlauf prädisponieren, ist eine niedriggradige Entzündung, wie sie z. B. beim metabolischen Syndrom, bei Diabetes und Herzinsuffizienz auftritt, wozu Mikronährstoffmängel beitragen können. Ziel des vorliegenden Artikels war, den Nutzen einer frühzeitigen Mikronährstoffintervention mit Schwerpunkt auf Zink, Selen und Vitamin D zu untersuchen, um eine Eskalation von COVID-19 zu verhindern. Wir führten eine Online-Suche nach Artikeln durch, die im Zeitraum 2010-2020 zu Zink, Selen und Vitamin D sowie zu Corona und verwandten Virusinfektionen veröffentlicht wurden. Es gab nur wenige Studien, die direkte Hinweise auf Zusammenhänge zwischen Zink, Selen und Vitamin D und COVID-19 lieferten. Eine ausreichende Versorgung mit Zink, Selen und Vitamin D ist für die Resistenz gegen andere Virusinfektionen, die Immunfunktion und die Verringerung von Entzündungen unerlässlich. Daher wird angenommen, dass eine Ernährungsintervention, die einen angemessenen Status sicherstellt, vor dem neuen Coronavirus SARS-CoV-2 (Schweres Akutes Respiratorisches Syndrom - Coronavirus-2) schützen und den Verlauf von COVID-19 mildern könnte. Wir empfehlen, in Hochrisikogebieten und/oder kurz nach dem Zeitpunkt einer vermuteten Infektion mit SARS-CoV-2 mit einer angemessenen Supplementierung zu beginnen. Personen in Hochrisikogruppen sollten eine hohe Priorität hinsichtlich dieser ernährungsbegleitenden Therapie haben, die vor der Verabreichung spezifischer und unterstützender medizinischer Maßnahmen begonnen werden sollte.' 
-  tags:        [Coronavirus, Ernährung, Therapie, Mikronährstoffe, Selen, Zink, Vitamin A, Vitamin D, Coenzym Q10]
+  tags:        [Ernährung, Therapie, Mikronährstoffe, Selen, Zink, Vitamin A, Vitamin D, Coenzym Q10]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu12082358
 ---
