--- a/_studies/2021-02-15-10.1016_j.actpha.2021.02.012.md
+++ b/_studies/2021-02-15-10.1016_j.actpha.2021.02.012.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Vitamine D and Covid-19'
   description: 'Vitamin D, which is increasingly in demand in pharmacies and increasingly prescribed, could be an asset in the treatment of Covid-19 by reducing mortality or the severity of the condition. Its potential immunomodulatory effect is currently being studied by numerous international teams of researchers.'
-  tags:        [coronavirus, immunity, vitamin D]
+  tags:        [immunity, vitamin D]
 de:
   subtitle:    'Vitamin D und COVID-19'
   description: 'Vitamin D, das in Apotheken immer häufiger nachgefragt und immer häufiger verschrieben wird, könnte bei der Behandlung von Covid-19 helfen, indem es die Sterblichkeit oder den Schweregrad der Erkrankung senkt. Seine potenzielle immunmodulierende Wirkung wird derzeit von zahlreichen internationalen Forscherteams untersucht.' 
-  tags:        [Coronavirus, Immunität, Vitamin D]
+  tags:        [Immunität, Vitamin D]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.actpha.2021.02.012
 ---
