--- a/_studies/2022-01-20-10.3390_ijerph19031125.md
+++ b/_studies/2022-01-20-10.3390_ijerph19031125.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Micronutrient Deficiency as a Confounder in Ascertaining the Role of Obesity in Severe COVID-19 Infection'
   description: 'Food insecurity in the United States has been exacerbated due to the socioeconomic strain of the coronavirus disease 2019 (COVID-19) pandemic. Populations experiencing poverty and, as a consequence, food insecurity in the United States are disproportionately affected by obesity, which was identified early in the pandemic as a major risk factor for increased susceptibility to COVID-19 infection and mortality. Given the focus on obesity and its role in immune dysregulation, it is also important to note the role of micronutrient deficiency, another sequalae of food insecurity. Micronutrients play an important role in the ability of the immune system to mount an appropriate response. Moreover, OBESE individuals are more likely to be micronutrient deficient. This review will explore the role of micronutrients, vitamin A, vitamin D, vitamin C, and zinc in respiratory immunity and COVID-19 and how micronutrient deficiency may be a possible confounder in obesity’s association with severe outcomes. By illuminating the role of micronutrients in COVID-19, this paper expands the discussion from food insecurity and obesity to include micronutrient deficiency and how all of these interact in respiratory illnesses such as  COVID-19. '
-  tags:        [micronutrients, vitamin D, vitamin A, coronavirus, respiratory infections, obesity, food insecurity]
+  tags:        [micronutrients, vitamin D, vitamin A, respiratory infections, obesity, food insecurity]
 de:
   subtitle:    'Mikronährstoffmangel als Störfaktor bei der Ermittlung der Rolle von Fettleibigkeit bei schwerer COVID-19-Infektion'
   description: 'Die sozioökonomische Belastung durch die Coronavirus-Pandemie 2019 (COVID-19) hat die Ernährungsunsicherheit in den Vereinigten Staaten noch verschärft. Bevölkerungsgruppen, die von Armut und infolgedessen von Ernährungsunsicherheit in den Vereinigten Staaten betroffen sind, sind überproportional von Fettleibigkeit betroffen, die schon früh in der Pandemie als ein wichtiger Risikofaktor für eine erhöhte Anfälligkeit für COVID-19-Infektionen und Mortalität identifiziert wurde. Angesichts der Fokussierung auf Fettleibigkeit und ihre Rolle bei der Dysregulation des Immunsystems ist es auch wichtig, die Rolle des Mikronährstoffmangels, einer weiteren Folge der Ernährungsunsicherheit, zu beachten. Mikronährstoffe spielen eine wichtige Rolle für die Fähigkeit des Immunsystems, eine angemessene Reaktion zu zeigen. Außerdem ist die Wahrscheinlichkeit eines Mikronährstoffmangels bei OBESE-Personen größer. In dieser Übersichtsarbeit wird die Rolle von Mikronährstoffen, Vitamin A, Vitamin D, Vitamin C und Zink bei der Immunität der Atemwege und COVID-19 untersucht, und es wird dargelegt, inwiefern ein Mikronährstoffmangel ein möglicher Störfaktor bei der Assoziation von Fettleibigkeit mit schwerwiegenden Folgen sein könnte. Indem die Rolle von Mikronährstoffen bei COVID-19 beleuchtet wird, erweitert dieses Papier die Diskussion von Ernährungsunsicherheit und Fettleibigkeit auf Mikronährstoffmangel und darauf, wie all diese Faktoren bei Atemwegserkrankungen wie COVID-19 zusammenwirken.' 
-  tags:        [Mikronährstoffe, Vitamin D, Vitamin A, Coronavirus, Atemwegsinfektionen, Fettleibigkeit, Ernährungsunsicherheit]
+  tags:        [Mikronährstoffe, Vitamin D, Vitamin A, Atemwegsinfektionen, Fettleibigkeit, Ernährungsunsicherheit]
 group:         'Treatments'
 credit:        https://doi.org/10.1155/2022/5106342
 ---
