--- a/_studies/2021-04-29-10.23736_S2784-8671.21.06833-4.md
+++ b/_studies/2021-04-29-10.23736_S2784-8671.21.06833-4.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Ultraviolet radiation, vitamin D, and COVID-19'
   description: 'Severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2), the causative agent of coronavirus disease 2019 (COVID-19), has become pandemic on March 11th, 2020. COVID-19 has a range of symptoms that includes fever, fatigue, dry cough, aches, and labored breathing to acute respiratory distress and possibly death. Health systems and hospitals have been completely rearranged since March 2020 in order to limit the high rate of virus spreading. Hence, a great debate on deferrable visits and treatments including phototherapy for skin diseases is developing. In particular, as regards phototherapy very few data are currently available regarding the chance to continue it, even if it may be a useful resource for treating numerous dermatological patients. However, phototherapy has an immunosuppressive action possibly facilitating virus infection. In the context of COVID-19 infection risk it is important to pointed out whether sunlight, phototherapy and in particular ultraviolet radiation (UV-R) constitute or not a risk for patients. In this review we aimed to focus on the relationship between UV-R, sunlight, phototherapy, and viral infections particularly focusing on COVID-19.'
-  tags:        [Coronavirus, Ultraviolet rays, Vitamin D, Sunlight]
+  tags:        [Ultraviolet rays, Vitamin D, Sunlight]
 de:
   subtitle:    'Ultraviolette Strahlung, Vitamin D und COVID-19'
   description: 'Das schwere akute respiratorische Syndrom Coronavirus-2 (SARS-CoV-2), der Erreger der Coronavirus-Krankheit 2019 (COVID-19), ist am 11. März 2020 pandemisch geworden. COVID-19 weist eine Reihe von Symptomen auf, die von Fieber, Müdigkeit, trockenem Husten, Schmerzen und erschwerter Atmung bis hin zu akuter Atemnot und möglicherweise zum Tod reichen. Die Gesundheitssysteme und Krankenhäuser wurden ab März 2020 komplett umgestellt, um die hohe Ausbreitungsrate des Virus zu begrenzen. Infolgedessen entwickelt sich eine große Debatte über aufschiebbare Besuche und Behandlungen, einschließlich der Phototherapie bei Hautkrankheiten. Insbesondere für die Phototherapie gibt es derzeit nur wenige Daten über die Möglichkeit, sie fortzusetzen, auch wenn sie ein nützliches Mittel für die Behandlung zahlreicher dermatologischer Patienten sein kann. Die Phototherapie hat jedoch eine immunsuppressive Wirkung, die möglicherweise eine Virusinfektion begünstigt. Im Zusammenhang mit dem COVID-19-Infektionsrisiko ist es wichtig, darauf hinzuweisen, ob Sonnenlicht, Phototherapie und insbesondere ultraviolette Strahlung (UV-R) ein Risiko für Patienten darstellen oder nicht. In dieser Übersichtsarbeit wollten wir uns auf die Beziehung zwischen UV-R, Sonnenlicht, Phototherapie und Virusinfektionen konzentrieren, insbesondere auf COVID-19.' 
-  tags:        [Coronavirus, Ultraviolette Strahlung, Vitamin D, Sonnenlicht]
+  tags:        [Ultraviolette Strahlung, Vitamin D, Sonnenlicht]
 group:         'Treatments'
 credit:        https://doi.org/10.23736/S2784-8671.21.06833-4
 ---
