--- a/_studies/2021-10-29-10.1186_s43088-021-00163-2.md
+++ b/_studies/2021-10-29-10.1186_s43088-021-00163-2.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Vitamins and other immune-supportive elements as cofactors for passing the COVID-19 pandemic'
   description: 'Coronavirus disease 2019 (COVID-19) is a viral disease that causes a respiratory disorder, started in December of 2019 in China. Several vitamins and trace elements could help in enhancing host immunity producing antioxidant or anti-inflammatory action. This work aimed to identify the role of different nutrition, vitamins, and trace elements on the immunity status of the infected subject and the possibility of the beneficial role of these elements in the management of COVID-19. After collecting (PubMed, scholar, OVID, Embase, Cochrane Library) and investigating published articles, testing the effect of these elements on viral infection, it was found that most of these elements have a significant role during viral infection through a different mechanism, like antioxidant, anti-inflammatory, and immunomodulation. Nutritional interventions in COVID-19 infections are very important currently, and it was reported that vitamin C and D reduce the risk of acute respiratory infections. In addition, low vitamin A diets compromise the effectiveness of inactivated bovine coronavirus vaccines. Administration of N-acetyl cysteine showed a beneficial inhibitory effect in viral infections and enhanced glutathione production. The deficiency of selenium on COVID-19 subjects has a significant impact on the clinical outcome of the subjects. In addition, supplementation with vitamins proved to enhance immune response during viral infection. Vitamins and trace elements not only showed a beneficial effect but also Omega 3 fatty acids showed an immunomodulating effect during infections. Assessment of levels for these trace elements at the baseline and providing supplementation containing different vitamins and elements could result in better control and clinical outcomes in the case of COVID-19.'
-  tags:        [Coronavirus, Nutrition, Vitamins, Immunity, Traced elements]
+  tags:        [Nutrition, Vitamins, Immunity, Traced elements]
 de:
   subtitle:    'Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung der COVID-19-Pandemie'
   description: 'Die Coronavirus-Pandemie 2019 (COVID-19) ist eine Viruserkrankung, die eine Atemwegserkrankung verursacht und im Dezember 2019 in China begann. Mehrere Vitamine und Spurenelemente könnten zur Stärkung der Immunität des Wirts beitragen, indem sie antioxidativ oder entzündungshemmend wirken. Ziel dieser Arbeit war es, die Rolle verschiedener Nährstoffe, Vitamine und Spurenelemente auf den Immunitätsstatus der infizierten Person zu ermitteln und die Möglichkeit einer positiven Rolle dieser Elemente bei der Behandlung von COVID-19 zu prüfen. Nach dem Sammeln (PubMed, Scholar, OVID, Embase, Cochrane Library) und der Untersuchung veröffentlichter Artikel, in denen die Wirkung dieser Elemente auf die Virusinfektion getestet wurde, wurde festgestellt, dass die meisten dieser Elemente während der Virusinfektion über verschiedene Mechanismen eine wichtige Rolle spielen, z. B. antioxidativ, entzündungshemmend und immunmodulatorisch. Ernährungsspezifische Maßnahmen bei COVID-19-Infektionen sind derzeit sehr wichtig, und es wurde berichtet, dass Vitamin C und D das Risiko akuter Atemwegsinfektionen verringern. Darüber hinaus beeinträchtigt eine Vitamin-A-arme Ernährung die Wirksamkeit von inaktivierten Impfstoffen gegen Rindercoronaviren. Die Verabreichung von N-Acetylcystein zeigte eine positive hemmende Wirkung bei Virusinfektionen und erhöhte die Glutathionproduktion. Der Selenmangel bei den COVID-19-Teilnehmern hat einen erheblichen Einfluss auf das klinische Ergebnis der Teilnehmer. Darüber hinaus hat sich gezeigt, dass eine Supplementierung mit Vitaminen die Immunantwort während einer Virusinfektion verbessert. Vitamine und Spurenelemente zeigten nicht nur eine positive Wirkung, sondern auch Omega-3-Fettsäuren zeigten eine immunmodulierende Wirkung während der Infektion. Die Bestimmung des Gehalts an diesen Spurenelementen zu Beginn der Studie und die Verabreichung von Nahrungsergänzungsmitteln mit verschiedenen Vitaminen und Spurenelementen könnte im Fall von COVID-19 zu einer besseren Kontrolle und besseren klinischen Ergebnissen führen.' 
-  tags:        [Coronavirus, Ernährung, Vitamine, Immunität, Spurenelemente]
+  tags:        [Ernährung, Vitamine, Immunität, Spurenelemente]
 group:         'Treatments'
 credit:        https://doi.org/10.1186/s43088-021-00163-2
 ---
