--- a/_studies/2021-09-22-10.3390_medicina57100997.md
+++ b/_studies/2021-09-22-10.3390_medicina57100997.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Pathophysiology of Vaccine-Induced Prothrombotic Immune Thrombocytopenia (VIPIT) and Vaccine-Induced Thrombocytopenic Thrombosis (VITT) and Their Diagnostic Approach in Emergency.'
   description: 'Abstract: SARS-CoV-2 induced a pandemic that is reported to have started in Asia and was then extended to other countries in the world. Main clinical aspects of this viral infection have been lung injuries with severe pneumonia requiring prolonged hospitalization and associated morbidities such as venous thromboembolism and/or superinfection by bacteria, fungus or other pests. Immediately there was a need to develop a sustainable therapeutic strategy, such as vaccination. Vaccines against Covid-19, in fact, exert a protective action for common people and reduce viral diffusion. Yet, vaccination of a large number of people raises the question of a well-known complication of several types of vaccines; this complication is immune thrombocytopenia, which is sometimes associated with thrombosis as well. In this short review, we summarized mechanisms involved in the pathogenesis of vaccine-induced prothrombotic immune thrombocytopenia and vaccine-induced thrombocytopenic thrombosis.'
-  tags:        [anti-SARS-CoV-2 vaccine, pandemic, vaccine]
+  tags:        [anti-SARS-CoV-2 vaccine, pandemic, Vaccines]
 de:
   subtitle:    'Pathophysiologie der impfstoffinduzierten prothrombotischen Immunthrombozytopenie (VIPIT) und der impfstoffinduzierten thrombozytopenischen Thrombose (VITT) und ihr diagnostischer Ansatz in der Notaufnahme.'
   description: 'Abstract: SARS-CoV-2 löste eine Pandemie aus, die Berichten zufolge in Asien begann und sich dann auf andere Länder der Welt ausweitete. Die wichtigsten klinischen Aspekte dieser Virusinfektion waren Lungenverletzungen mit schweren Lungenentzündungen, die einen längeren Krankenhausaufenthalt erforderten, und damit verbundene Morbiditäten wie venöse Thromboembolien und/oder Superinfektionen durch Bakterien, Pilze oder andere Schädlinge. Es bestand sofort die Notwendigkeit, eine nachhaltige therapeutische Strategie zu entwickeln, beispielsweise eine Impfung. Impfstoffe gegen Covid-19 haben eine schützende Wirkung für die Allgemeinheit und verringern die Verbreitung des Virus. Die Impfung einer großen Zahl von Menschen wirft jedoch die Frage nach einer bekannten Komplikation mehrerer Impfstofftypen auf; diese Komplikation ist die Immunthrombozytopenie, die manchmal auch mit Thrombose einhergeht. In dieser kurzen Übersicht werden die Mechanismen zusammengefasst, die an der Pathogenese der impfstoffinduzierten prothrombotischen Immunthrombozytopenie und der impfstoffinduzierten thrombozytopenischen Thrombose beteiligt sind.' 
-  tags:        [Anti-SARS-CoV-2-Impfstoff, Pandemie, Impfstoff]
+  tags:        [Anti-SARS-CoV-2-Impfstoff, Pandemie, Impfstoffe]
 group:         'Vaccines'
 credit:        https://doi.org/10.3390/medicina57100997
 ---
