--- a/_studies/2021-11-27-10.7759_cureus.19934.md
+++ b/_studies/2021-11-27-10.7759_cureus.19934.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Comparison of Dementia Patients Admission Rates and Dementia Characteristics Before and During the COVID-19 Pandemic'
   description: 'The coronavirus disease 2019 (COVID-19) epidemic was recognized as a pandemic by the World Health Organization on March 2020. There have been significant changes in our lives due to the measures used to prevent the spread of the COVID-19 pandemic. Dementia patients are one of the most vulnerable groups who have difficulties in adapting to this situation. Our study aimed to compare the admission rate to the hospital and dementia characteristics of dementia patients in the COVID-19 pandemic and pre-pandemic periods. Dementia patients admitted to the neurology outpatient clinic during the pandemic and pre-pandemic periods were included in the study. In these two periods, age, gender, dementia type, stage, age of onset, mini-mental state examination, reason for admission, vitamin B12, vitamin D, folic acid levels, brain imaging, electroencephalogram results were analysed retrospectively. Dementia characteristics and vitamin levels were compared. Two hundred and two dementia patients were included in the study. When the reasons for admission to the hospital were examined, the number of applications with the complaint of forgetfulness was highest in the pre-COVID period (53.1%); this rate was 37.8% in the COVID period. Also, 9.5% of patients were admitted for a drug prescription or medication report during the COVID period, while this rate was 1.6% in the pre-COVID period. Brain imaging was performed on 91 patients in the pre-COVID period, while 42 patients underwent imaging in the COVID period. Although this study was performed with a limited population, it indicates that the COVID-19 pandemic indirectly affects the clinical conditions of people living with dementia.'
-  tags:        [dementia, Covid-19, vitamins]
+  tags:        [dementia, vitamins]
 de:
   subtitle:    'Vergleich der Aufnahmeraten von Demenzpatienten und der Demenzmerkmale vor und während der COVID-19-Pandemie'
   description: 'Die Coronavirus-Epidemie 2019 (COVID-19) wurde von der Weltgesundheitsorganisation im März 2020 als Pandemie anerkannt. Die Maßnahmen, die zur Verhinderung der Ausbreitung der COVID-19-Pandemie ergriffen wurden, haben unser Leben stark verändert. Demenzkranke sind eine der am meisten gefährdeten Gruppen, die Schwierigkeiten haben, sich auf diese Situation einzustellen. Ziel unserer Studie war es, die Einweisungsrate ins Krankenhaus und die Demenzmerkmale von Demenzpatienten während der COVID-19-Pandemie und vor der Pandemie zu vergleichen. In die Studie wurden Demenzpatienten einbezogen, die während der Pandemie und vor der Pandemie in die neurologische Ambulanz aufgenommen wurden. In diesen beiden Zeiträumen wurden Alter, Geschlecht, Demenztyp, Stadium, Alter des Krankheitsbeginns, Mini-Mental-State-Untersuchung, Grund für die Einweisung, Vitamin-B12-, Vitamin-D- und Folsäurespiegel sowie die Ergebnisse der Gehirnbildgebung und des Elektroenzephalogramms retrospektiv ausgewertet. Demenzmerkmale und Vitaminspiegel wurden verglichen. Zweihundertzwei Demenzpatienten wurden in die Studie aufgenommen. Bei der Untersuchung der Gründe für die Einweisung ins Krankenhaus war die Zahl der Anträge mit der Beschwerde der Vergesslichkeit in der Zeit vor der COVID am höchsten (53,1 %); in der COVID-Periode lag diese Rate bei 37,8 %. Außerdem wurden 9,5 % der Patienten im COVID-Zeitraum wegen einer Medikamentenverschreibung oder eines Medikamentenberichts eingewiesen, während diese Rate im Zeitraum vor der COVID bei 1,6 % lag. In der Zeit vor der COVID-Studie wurde bei 91 Patienten eine Bildgebung des Gehirns durchgeführt, während dies in der COVID-Studie bei 42 Patienten der Fall war. Obwohl diese Studie mit einer begrenzten Population durchgeführt wurde, deutet sie darauf hin, dass sich die COVID-19-Pandemie indirekt auf den klinischen Zustand von Menschen mit Demenz auswirkt.' 
-  tags:        [Demenz, Covid-19, Vitamine]
+  tags:        [Demenz, Vitamine]
 group:         'Treatments'
 credit:        https://doi.org/10.7759/cureus.19934
 ---
